# Search_engine_on_Qt

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  config.json  history.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  writingtofile.cpp  writingtofile.h
resources/: Green oak near Lukomorye.txt  Some file.txt  Tatiana's letter to Onegin.txt  To Chaadaev.txt  Winter morning.txt
